# flex-information-system

./: .editorconfig  .env  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .golangci.yml  .markdownlint.json  .mega-linter.yml  .pre-commit-config.yaml  .spectral.yaml  .sqlfluff  .tbls.yml  .yamlfmt  .yamllint.yml  404.html  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  LICENSE-MIT  README.md  detekt-config.yaml  docker-compose.yml  index.html  justfile  litellm-keys.env  mise.toml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  schemathesis.toml  sitemap.xml
.devxp/: compass.yaml
.github/: renovate.json  renovate.json5
.teamcity/: pom.xml  settings.kts
api/: index.html  settings.gradle.kts
auth/: index.html
backend/: .air.toml  Dockerfile  Makefile  api.sql  flex.go  go.mod  go.sum  schema.sql  sqlc.yaml
changelog/: index.html
concepts/: index.html
cookies/: index.html
db/: api_auth.sql  api_field_level_authorization.sql  api_structure.sql  auth_base.sql  changelog.sql  changelog.yml  flex_auth.sql  flex_base.sql  flex_field_level_authorization.sql  flex_reference_data.psql  flex_structure.sql  flex_test.psql  flex_users.sql  load.sh  logic.sql  pre.psql  pre.sql  replication.sql  unload.sh  users.sql
diagrams/: controllable_unit_lookup.plantuml  controllable_unit_registration.plantuml  grid_nodes.plantuml  grid_transformer.plantuml  login_sequence.plantuml  registration_happy_path.plantuml  resources.plantuml  revocation.plantuml  service_provider_product_application.plantuml  spg_cu_ev_example.plantuml  (+7 more)
(+2257 files in other folders)
